# cliqpart

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  chorded_cycles_exact.py  chorded_cycles_heuristic.py  find_all_data.sh  find_all_run_configs.sh  find_nice_random_data.sh  find_non_random_data.sh  find_random_data.sh  find_small_random_data.sh
analysis/: analysis.py  helper.py  perform_analysis.sh
analysis/analysisCSVs/: adjnoun_analysis.csv  all_lin_gap_bars.pgf  all_log_gap_bars.pgf  all_time_and_gap_bars.pgf  all_time_bars.pgf  cetacea_analysis.csv  dolphins_analysis.csv  football_analysis.csv  karate_analysis.csv  lesmis_analysis.csv  lin_gap_bars.pgf  lin_gaps.pgf  non_random_lin_gap_bars.pgf  non_random_log_gap_bars.pgf  non_random_time_and_gap_bars.pgf  non_random_time_bars.pgf  organoid_100_hard_analysis.csv  organoid_100_medium_analysis.csv  organoid_100_soft_analysis.csv  organoid_160_hard_analysis.csv  organoid_160_medium_analysis.csv  organoid_160_soft_analysis.csv  organoid_40_hard_analysis.csv  organoid_40_medium_analysis.csv  organoid_40_soft_analysis.csv  organoid_80_hard_analysis.csv  organoid_80_medium_analysis.csv  organoid_80_soft_analysis.csv  polbooks_analysis.csv  random_binary_s25_analysis.csv  random_binary_s50_analysis.csv  random_lin_gap_bars.pgf  random_log_gap_bars.pgf  random_normal_s25_0.5_0.5_analysis.csv  random_normal_s25_0.5_1_analysis.csv  random_normal_s25_0.5_2_analysis.csv  random_normal_s25_0_0.5_analysis.csv  random_normal_s25_0_1_analysis.csv  random_normal_s25_0_2_analysis.csv  random_normal_s25_2_0.5_analysis.csv  (+24 more)
data/: clean_data.sh  generate_from_graph.py  generate_random.py  relations_to_graph.py  remove_optimal_solutions.sh
data/cetecea/: data.csv  data.toml  raw_data_from_paper.csv
data/custom/violated_2/: data.csv  data.toml  optimal.sol
data/custom/violated_half/: optimal.sol
data/example/: data.csv
data/grötschel_wakabayashi/: relations_to_graph.py
data/grötschel_wakabayashi/cetacea/: data.csv  optimal.sol
data/grötschel_wakabayashi/wild_cats/: data.csv  data.toml  optimal.sol  raw_data.csv
data/modularity_clustering/: calc_multicut_offset.py  convert.py
data/modularity_clustering/adjnoun/: data.csv  data.toml
data/modularity_clustering/dolphins/: data.csv  data.toml  optimal.sol
data/modularity_clustering/football/: data.csv  data.toml  optimal.sol
data/modularity_clustering/karate/: data.csv  data.toml  optimal.sol
data/modularity_clustering/lesmis/: data.csv  data.toml  optimal.sol
data/modularity_clustering/polbooks/: data.csv  data.toml  optimal.sol
data/organoid_100/: data.toml
data/organoid_160/: data.toml
data/organoid_80/: data.toml
data/organoids/: config_Δ_only.toml  config_Δ_st.toml  data.toml  run_config.toml
data/organoids/organoid_100_hard/: data.toml  optimal.sol
data/organoids/organoid_100_medium/: data.toml  optimal.sol
data/organoids/organoid_100_soft/: data.toml  optimal.sol
data/organoids/organoid_160_hard/: data.toml  optimal.sol
data/organoids/organoid_160_medium/: data.csv  data.toml  optimal.sol
data/organoids/organoid_160_soft/: data.toml  optimal.sol
data/organoids/organoid_40_hard/: data.toml  optimal.sol
data/organoids/organoid_40_medium/: data.toml  optimal.sol
data/organoids/organoid_40_soft/: data.toml  optimal.sol
data/organoids/organoid_80_hard/: data.toml  optimal.sol
data/organoids/organoid_80_medium/: data.toml  optimal.sol
data/organoids/organoid_80_soft/: data.toml  optimal.sol
data/organoids_100/: data.csv
data/organoids_80/: data.toml
data/random/: generate_from_graph.py  generate_random.py
data/violated_half/: data.csv
run_configs/: config_all.toml  config_Δ.toml  config_Δ_chorded-cycles.toml  config_Δ_half.toml  config_Δ_no-maxcut.toml  config_Δ_no-maxcut_var-once.toml  config_Δ_only.toml  config_Δ_st.toml  config_Δ_st1.toml  config_Δ_st12.toml  config_Δ_st2.toml  config_Δ_two.toml  config_Δ_var-once.toml  cycles.toml
src/: CMakeLists.txt  clique_part_model.cpp  clique_part_model.h  complete_graph.cpp  complete_graph.h  data.cpp  data.h  ilp_callback.cpp  ilp_callback.h  main.cpp  model_wrapper.cpp  model_wrapper.h  run_config.cpp  run_config.h  separator_factory.cpp  separator_factory.h  types.h  verbosity.h
src/separators/: Cubic_Triangle_Separator.cpp  Cubic_Triangle_Separator.h  abstract_separator.cpp  abstract_separator.h  cubic_triangle_separator.cpp  cubic_triangle_separator.h  gw_separator.cpp  gw_separator.h  st_separator.cpp  st_separator.h  triangle_separator.cpp  triangle_separator.h
src/separators/oddSequences/: AuxGraph.cpp  AuxGraph.h  CircleSeparator.cpp  CircleSeparator.h
tex/: analysisCSVs  dolphins_analysis.csv  main.tex  paper.tex  preamble.tex  references.bib  vortrag.tex
tex/analysisCSVs/: adjnoun_analysis.csv  dolphins_analysis.csv  karate_analysis.csv  lesmis_analysis.csv  organoid_100_medium_analysis.csv  organoid_100_soft_analysis.csv  organoid_160_medium_analysis.csv  organoid_160_soft_analysis.csv  organoid_40_medium_analysis.csv  organoid_80_soft_analysis.csv  polbooks_analysis.csv
tex/sections/: Appendix.tex  CPP.tex  Data.tex  Discussion.tex  Experiments.tex  Introduction.tex  Related.tex  Results.tex  Separation.tex  Separators.tex
